Fast AI port to NeoForge 1.21.1